# pdfchips

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  pdf_engine.rs
src/components/: Sidebar.tsx
src/pages/: Dashboard.tsx  MarkdownToPdf.tsx  PdfCrop.tsx  PdfOcr.tsx  PdfToImage.tsx  PptToPdf.tsx  TxtToPdf.tsx  WordToPdf.tsx
