[package]
name = "pdf-chips"
version = "0.1.17"
description = "PDF & Chips - Privacy-first PDF tools for Linux, Windows & macOS"
authors = ["saaandbite"]
license = "MIT"
repository = "https://github.com/saaandbite/pdfchips"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "pdf-chips"
path = "src/main.rs"

[lib]
name = "pdf_chips_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt"] }
printpdf = { version = "0.9.1", features = ["images", "png", "jpeg"] }
lopdf = "0.39.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "ico"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
